# Fcitx5_LLM_plugin

./: .gitignore  CMakeLists.txt  README.md
build-bitnet/: ecm_uninstall.cmake  install_manifest.txt
data/: fcitx5-llm-predict-addon.conf  llm-predict.conf
src/: config.h  llmpredictengine.cpp  llmpredictengine.h  llmpredictor.cpp  llmpredictor.h
